# prepared-postgres

./: Cargo.toml
prepared-postgres/: Cargo.toml
prepared-postgres-derive/: Cargo.toml
prepared-postgres-derive/src/: lib.rs
prepared-postgres-derive/tests/: derive_test.rs
prepared-postgres/src/: lib.rs
prepared-postgres/tests/: prepared_test.rs
